<resources>
    <string name="app_name">PasswordManager</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="generator">Generator</string>
    <string name="analyze">Analyze</string>
    <string name="add_content_description">Add password information</string>

    <string name="title_str">タイトル</string>
    <string name="url_str">URL</string>
    <string name="user_id_str">ユーザーID</string>
    <string name="user_name_str">ユーザー名</string>
    <string name="email_str">E-Mail</string>
    <string name="password_str">パスワード</string>
    <string name="number_password_str">パスワード(数字)</string>
    <string name="secret_question1_str">秘密の質問1</string>
    <string name="secret_answer1_str">秘密の質問1の回答</string>
    <string name="secret_question2_str">秘密の質問2</string>
    <string name="secret_answer2_str">秘密の質問2の回答</string>
    <string name="secret_question3_str">秘密の質問3</string>
    <string name="secret_answer3_str">秘密の質問3の回答</string>
    <string name="use_to_e_mail_str">E-Mailを使用</string>
    <string name="memo_str">メモ</string>

    <string name="generate_pass_size_str">生成数</string>
    <string name="generate_pass_length_str">パスワード長</string>

    <string name="copy_str">コピー</string>
    <string name="generator_button_str">生成</string>
    <string name="edit_button_str">編集</string>
    <string name="register_str">登録</string>
    <string name="edit_password">EditPassword</string>
    <string name="show_password">ShowPassword</string>
    <string name="detail">Detail</string>
    <string name="csv_upload_str">CSVアップロード</string>
    <string name="csv_download_str">CSVダウンロード</string>
    <string name="upload_str">CSVファイルからパスワードを読み込む</string>
    <string name="read_password_str">パスワード読み込み</string>
    <string name="file_selection_str">ファイルを選択</string>
    <string name="title_activity_option">OptionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="write_password_str">CSVダウンロード</string>
    <string name="download_str">パスワードをCSV形式でダウンロードする</string>
    <string name="selecting_file_str">選択中のファイル:</string>
</resources>