<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.passwordmanager.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_pass_generator"
        android:name="com.example.passwordmanager.ui.generator.GeneratorFragment"
        android:label="@string/generator"
        tools:layout="@layout/fragment_generator" />
    <fragment
        android:id="@+id/navigation_analyze"
        android:name="com.example.passwordmanager.ui.analyze.AnalyzeFragment"
        android:label="@string/analyze"
        tools:layout="@layout/fragment_analyze" />
</navigation>