<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="vm"
            type="com.example.passwordmanager.ui.csv_upload.CsvUploadViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/upload_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_str" />

        <LinearLayout
            android:id="@+id/file_selection_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/selecting_file_str"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@{vm.liveFileName}"
                android:maxLines="1"
                android:ellipsize="start" />
            <Button
                android:id="@+id/file_selection_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/file_selection_str"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_password_str" />
    </LinearLayout>
</layout>