<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.generator.GeneratorFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_pass_size_str" />

    <EditText
        android:id="@+id/generate_pass_size_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/generate_pass_size_str"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_pass_length_str" />

    <EditText
        android:id="@+id/generate_pass_length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/generate_pass_length_str"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/generator_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false" />

    <Button
        android:id="@+id/generator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/generator_button_str" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/generate_password_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>