<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="vm"
            type="com.example.passwordmanager.ui.edit_password.EditPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="2dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:layout_weight="1">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="2"
                tools:layout_insetEdge="bottom">

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_str"
                    app:layout_column="0"
                    app:layout_row="1" />

                <EditText
                    android:id="@+id/title_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/title_str"
                    android:text="@={vm.livePassInfo.title}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/url_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url_str"
                    app:layout_column="0"
                    app:layout_row="3" />

                <EditText
                    android:id="@+id/url_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/url_str"
                    android:text="@={vm.livePassInfo.url}"
                    android:inputType="textUri"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="4" />

                <TextView
                    android:id="@+id/user_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id_str"
                    app:layout_column="0"
                    app:layout_row="5" />

                <EditText
                    android:id="@+id/user_id_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/user_id_str"
                    android:text="@={vm.livePassInfo.user_id}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="6" />

                <Switch
                    android:id="@+id/user_id_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_to_e_mail_str"
                    app:layout_gravity="center_horizontal"
                    app:layout_column="1"
                    app:layout_row="6"
                    tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/user_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_str"
                    app:layout_column="0"
                    app:layout_row="7" />

                <EditText
                    android:id="@+id/user_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/user_name_str"
                    android:text="@={vm.livePassInfo.user_name}"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="8" />

                <Switch
                    android:id="@+id/user_name_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_to_e_mail_str"
                    app:layout_gravity="center_horizontal"
                    app:layout_column="1"
                    app:layout_row="8"
                    tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_str"
                    app:layout_column="0"
                    app:layout_row="9" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/email_str"
                    android:text="@={vm.livePassInfo.e_mail}"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="10" />

                <TextView
                    android:id="@+id/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_str"
                    app:layout_column="0"
                    app:layout_row="11" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_str"
                    android:text="@={vm.livePassInfo.password}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="12"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/number_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_password_str"
                    app:layout_column="0"
                    app:layout_row="13" />

                <EditText
                    android:id="@+id/number_password_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/number_password_str"
                    android:text="@={vm.livePassInfo.number_password}"
                    android:inputType="number"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="14" />

                <TextView
                    android:id="@+id/secret_question1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_question1_str"
                    app:layout_column="0"
                    app:layout_row="15" />

                <EditText
                    android:id="@+id/secret_question1_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/secret_question1_str"
                    android:text="@={vm.livePassInfo.secret_question1}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="16" />

                <TextView
                    android:id="@+id/secret_answer1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_answer1_str"
                    app:layout_column="0"
                    app:layout_row="17" />

                <EditText
                    android:id="@+id/secret_answer1_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/secret_answer1_str"
                    android:text="@={vm.livePassInfo.secret_answer1}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="18" />

                <TextView
                    android:id="@+id/secret_question2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_question2_str"
                    app:layout_column="0"
                    app:layout_row="19" />

                <EditText
                    android:id="@+id/secret_question2_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/secret_question2_str"
                    android:text="@={vm.livePassInfo.secret_question2}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="20" />

                <TextView
                    android:id="@+id/secret_answer2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_answer2_str"
                    app:layout_column="0"
                    app:layout_row="21" />

                <EditText
                    android:id="@+id/secret_answer2_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/secret_answer2_str"
                    android:text="@={vm.livePassInfo.secret_answer2}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="22" />

                <TextView
                    android:id="@+id/secret_question3_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_question3_str"
                    app:layout_column="0"
                    app:layout_row="23" />

                <EditText
                    android:id="@+id/secret_question3_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/secret_question3_str"
                    android:text="@={vm.livePassInfo.secret_question3}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="24" />

                <TextView
                    android:id="@+id/secret_answer3_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_answer3_str"
                    app:layout_column="0"
                    app:layout_row="25" />

                <EditText
                    android:id="@+id/secret_answer3_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/secret_answer3_str"
                    android:text="@={vm.livePassInfo.secret_answer3}"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_column="0"
                    app:layout_row="26" />

                <TextView
                    android:id="@+id/memo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memo_str"
                    app:layout_column="0"
                    app:layout_row="27" />

                <EditText
                    android:id="@+id/memo_input"
                    android:layout_width="wrap_content"
                    android:layout_height="96dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textMultiLine|text"
                    android:minHeight="48dp"
                    android:text="@={vm.livePassInfo.memo}"
                    app:layout_column="0"
                    app:layout_row="28" />
            </androidx.gridlayout.widget.GridLayout>
        </ScrollView>
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:layout_anchor="@id/edit_pass_container"
            app:layout_anchorGravity="bottom"
            android:text="@string/register_str"/>
    </LinearLayout>
</layout>